# openkrown

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  codemagic.yaml  fetch.sh  openkrown.pri  openkrown.pro  project.qdocconf  sdlwidget.cpp  sdlwidget.h  sysinfo.cpp
FindPackages/: FindLua.cmake  FindQt.cmake  FindSDL2.cmake
classes/: animal.cpp  animal.h  human.cpp  humans.hpp  pets.cpp  swordsman.cpp
doc/: openkrown.index
doc/style/: style.css
dtd/: Makefile  game.dtd  lands.dtd  main.cpp  planet.dtd  styles.css  test.cpp  world.xml
gamedir/: MyAdditions.h  packit.cxx  zipper.h
gamedir/client/: cl_main.cxx  window.m
mobileapp/: pubspec.yaml
mobileapp/ios/Runner.xcodeproj/: project.pbxproj
openkrownUI/openkrownUI/: ContentView.swift  openkrownUIApp.swift
openkrownUI/openkrownUI.xcodeproj/: project.pbxproj
openkrownUI/openkrownUITests/: openkrownUITests.swift
openkrownUI/openkrownUIUITests/: openkrownUIUITests.swift  openkrownUIUITestsLaunchTests.swift
recover/: icons.qrc  mainwindow.ui  zip.py
src/build-ide-Desktop_Qt_5_15_2_clang_64bit-Debug/.qtc_clangd/: compile_commands.json
src/classes/: animal.h  draconian.cpp  swordsman.cpp
src/dmg/: dmg.pro  openkrown.pri  package.py
src/dtd/: game.dtd
src/gamedir/: CMakeLists.txt  checksum.m
src/ide/: ide.pro  mainwindow.ui
src/math/: CMakeLists.txt
src/recover/: README.txt  app.py
src/srv/: README.txt
srv/src/: main.cpp  socket.cpp
store/: SellItem.cpp
store/headers/: SellItem.h
ui/: -home-bridge.h  home-bridge.h  openUI.m  openUI.swift
(+5 files in other folders)
